--- a/index.html
+++ b/index.html
@@ -1,106 +1,218 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Raleway&display=swap" rel="stylesheet">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Fylo landing page with dark theme and features grid</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <title>Fylo landing page with dark theme and features grid | Frontend Mentor </title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
+
 <body>
-  Features
-  Team
-  Sign In
 
-  All your files in one secure location, accessible anywhere.
+  <header>
+    <div class="container">
+      <nav>
+        <img src="images/logo.svg" alt="Fylo">
+        <ul class="horizontal-menu">
+          <li> <a href="#">Features</a> </li>
+          <li> <a href="#">Team</a> </li>
+          <li> <a href="#">Sing in</a> </li>
+        </ul>
+      </nav>
 
-  Fylo stores all your most important files in one secure location. Access them wherever 
-  you need, share and collaborate with friends family, and co-workers.
+      <section class="mid-container" id="intro">
+        <img id="intro-image" src="images/illustration-intro.png" alt="Folder illustration">
 
-  Get Started
+        <h1>All your files in one secure location, accesible anywhere</h1>
 
-  Access your files, anywhere
+        <h2>Fylo stores all your most important files in one secure location.
+          Acces them everywhere you need, share and collaborate with friends, family, and co-workers
+        </h2>
 
-  The ability to use a smartphone, tablet, or computer to access your account means your 
-  files follow you everywhere.
+        <a href="#" class="button rounded">Get Started</a>
+      </section>
 
-  Security you can trust
 
-  2-factor authentication and user-controlled encryption are just a couple of the security 
-  features we allow to help secure your files.
+    </div>
+  </header>
+  <div class="mid-container">
+    <section id="summary">
 
-  Real-time collaboration
+      <article>
+        <img src="images/icon-access-anywhere.svg" alt="Pc & phone vectors">
+        <h3>Access your files, anywhere</h3>
+        <p>The ability to use a smartphone, tablet or computer to access your account
+          means your files follow you everywhere.
+        </p>
+      </article>
 
-  Securely share files and folders with friends, family and colleagues for live collaboration. 
-  No email attachments required.
+      <article>
+        <img src="images/icon-security.svg" alt="Security icon">
+        <h3>Security you can trust</h3>
+        <p>2-factor authentication and user-controlled encryptation are just a couple
+          of the security we allow to help secure your files.
+        </p>
+      </article>
 
-  Store any type of file
+      <article>
+        <img src="images/icon-collaboration.svg" alt="Clock & multiple people">
+        <h3>Real-time collaboration</h3>
+        <p>Securely share file and folders with friends, family and colleagues for live collaboration.
+          No email attachments required.
+        </p>
+      </article>
 
-  Whether you're sharing holidays photos or work documents, Fylo has you covered allowing for all 
-  file types to be securely stored and shared.
+      <article>
+        <img src="images/icon-any-file.svg" alt="Any file icon">
+        <h3>Store any type of file</h3>
+        <p>
+          Whether yo're sharing holidays photos or work document, Ftlo has you covered allowing
+          for all file types to be securely stored and shared.
+        </p>
+      </article>
 
-  Stay productive, wherever you are
 
-  Never let location be an issue when accessing your files. Fylo has you covered for all of your file 
-  storage needs.
+    </section>
 
-  Securely share files and folders with friends, family and colleagues for live collaboration. No email 
-  attachments required.
+  </div>
 
-  See how Fylo works
+  <section id="stay-productive" class="container">
+    <img class="mid-content" src="images/illustration-stay-productive.png" alt="Three persons with message in his hand">
 
-  Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
-  become a well-oiled collaboration machine.
+    <div class="mid-content">
+      <h1>Stay productive, wherever you are</h1>
+      <p>Never let location an issue when accessing your files. Fylo has you covered for all
+        of your file storage needs.
+      </p>
+      <p>
+        Securely share files and folders with friends, family and colleagues for live collaboration. No email
+        attachments required.
+      </p>
+      <a>See how Fylo works</a>
+    </div>
 
-  Satish Patel
-  Founder & CEO, Huddle
 
-  Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
-  become a well-oiled collaboration machine.
+  </section>
 
-  Bruce McKenzie
-  Founder & CEO, Huddle
 
-  Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
-  become a well-oiled collaboration machine.
+  <section id="testimonials" class="container row-flex">
+    <article class="card">
+      <p>Fylo has improved our team productivity by an order of magnitude. Since making
+        the switch our team has become a well-oiled collaboration machine.
+      </p>
 
-  Iva Boyd
-  Founder & CEO, Huddle
+      <div class="user-info">
+        <img class="user-image" src="images/profile-1.jpg" alt="Profile picture">
+        <div>
+          <p><b>Satish Patel</b></p>
+          <span class="user-job">Founder & CEO, Huddle</span>
+        </div>
+      </div>
+    </article>
 
-  Get early access today
+    <article class="card">
+      <p>Fylo has improved our team productivity by an order of magnitude. Since making
+        the switch our team has become a well-oiled collaboration machine.
+      </p>
+      <div class="user-info">
+        <img class="user-image" src="images/profile-2.jpg" alt="Profile picture">
+        <div>
+          <p><b>Bruce MacKenzie</b></p>
+          <span class="user-job">Founder & CEO, Huddle</span>
+        </div>
+      </div>
 
-  It only takes a minute to sign up and our free starter tier is extremely generous. If you have any 
-  questions, our support team would be happy to help you.
+    </article>
+    <article class="card">
+      <p>Fylo has improved our team productivity by an order of magnitude. Since making
+        the switch our team has become a well-oiled collaboration machine.
+      </p>
+      <div class="user-info">
+        <img class="user-image" src="images/profile-3.jpg" alt="Profile picture">
+        <div>
 
-  Get Started For Free
+          <p><b>Iva Boyd</b>
+          <p>
+            <span class="user-job">Founder & CEO, Huddle</span>
+        </div>
+      </div>
+    </article>
+  </section>
 
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
-  dolore magna aliqua
+  
 
-  +1-543-123-4567
-  example@fylo.com
+  <footer  >
+    <section id="sign-up" class="mid-container">
+      <h2>Get early access today</h2>
+      <p>It only takes a minute to sign up and our free starter tier is extremely generous.
+        If you have any questions, our support team would be happy to help you.
+      </p>
+  
+      <input type="email" name="email" class="rounded" id="email-field" placeholder="email@example.com">
+      <input type="button" value="start" class="button rounded">
+  
+    </section>
+    <div class="container">
+    <img src="images/logo.svg" alt="Fylo icon">
+    <div class="row-flex-start">
+      <div class="text-icon-side">
+        <img src="images/icon-location.svg" alt="Loc-Icon">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+      </div>
 
-  About Us
-  Jobs
-  Press
-  Blog
+      <div class="text-icon-side">
+        <img src="images/icon-phone.svg" alt="Loc-Icon">
+        <p>+1-543-123-4567</p>
+      </div>
 
-  Contact Us
-  Terms
-  Privacy
+      <div class="text-icon-side">
+        <img src="images/icon-email.svg" alt="Loc-Icon">
+        <p>example@fylo.com</p>
+      </div>
 
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
+      <ul>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">Blog</a></li>
+      </ul>
+
+      <ul>
+        <li><a href="#">Contact Us</a></li>
+        <li><a href="#">Terms</a></li>
+        <li><a href="#">Privacy</a></li>
+      </ul>
+
+      <div>
+
+        <div class="social-icon">
+          <svg id="Bold" enable-background="new 0 0 24 24" height="30" viewBox="0 0 24 24" width="30" xmlns="http://www.w3.org/2000/svg"><path d="m15.997 3.985h2.191v-3.816c-.378-.052-1.678-.169-3.192-.169-3.159 0-5.323 1.987-5.323 5.639v3.361h-3.486v4.266h3.486v10.734h4.274v-10.733h3.345l.531-4.266h-3.877v-2.939c.001-1.233.333-2.077 2.051-2.077z"/></svg>
+        </div>
+
+        <div class="social-icon">
+          <svg height="681pt" viewBox="-21 -81 681.33464 681" width="30" xmlns="http://www.w3.org/2000/svg"><path d="m200.964844 515.292969c241.050781 0 372.871094-199.703125 372.871094-372.871094 0-5.671875-.117188-11.320313-.371094-16.9375 25.585937-18.5 47.824218-41.585937 65.371094-67.863281-23.480469 10.441406-48.753907 17.460937-75.257813 20.636718 27.054687-16.230468 47.828125-41.894531 57.625-72.488281-25.320313 15.011719-53.363281 25.917969-83.214844 31.808594-23.914062-25.472656-57.964843-41.402344-95.664062-41.402344-72.367188 0-131.058594 58.6875-131.058594 131.03125 0 10.289063 1.152344 20.289063 3.398437 29.882813-108.917968-5.480469-205.503906-57.625-270.132812-136.921875-11.25 19.363281-17.742188 41.863281-17.742188 65.871093 0 45.460938 23.136719 85.605469 58.316407 109.082032-21.5-.660156-41.695313-6.5625-59.351563-16.386719-.019531.550781-.019531 1.085937-.019531 1.671875 0 63.46875 45.171875 116.460938 105.144531 128.46875-11.015625 2.996094-22.605468 4.609375-34.558594 4.609375-8.429687 0-16.648437-.828125-24.632812-2.363281 16.683594 52.070312 65.066406 89.960937 122.425781 91.023437-44.855469 35.15625-101.359375 56.097657-162.769531 56.097657-10.5625 0-21.003906-.605469-31.2617188-1.816407 57.9999998 37.175781 126.8710938 58.871094 200.8867188 58.871094"/></svg>
+        </div>
+        <div class="social-icon">
+
+          <svg color="green" height="30" viewBox="0 0 511 511.9" width="30" xmlns="http://www.w3.org/2000/svg">
+            <path d="m510.949219 150.5c-1.199219-27.199219-5.597657-45.898438-11.898438-62.101562-6.5-17.199219-16.5-32.597657-29.601562-45.398438-12.800781-13-28.300781-23.101562-45.300781-29.5-16.296876-6.300781-34.898438-10.699219-62.097657-11.898438-27.402343-1.300781-36.101562-1.601562-105.601562-1.601562s-78.199219.300781-105.5 1.5c-27.199219 1.199219-45.898438 5.601562-62.097657 11.898438-17.203124 6.5-32.601562 16.5-45.402343 29.601562-13 12.800781-23.097657 28.300781-29.5 45.300781-6.300781 16.300781-10.699219 34.898438-11.898438 62.097657-1.300781 27.402343-1.601562 36.101562-1.601562 105.601562s.300781 78.199219 1.5 105.5c1.199219 27.199219 5.601562 45.898438 11.902343 62.101562 6.5 17.199219 16.597657 32.597657 29.597657 45.398438 12.800781 13 28.300781 23.101562 45.300781 29.5 16.300781 6.300781 34.898438 10.699219 62.101562 11.898438 27.296876 1.203124 36 1.5 105.5 1.5s78.199219-.296876 105.5-1.5c27.199219-1.199219 45.898438-5.597657 62.097657-11.898438 34.402343-13.300781 61.601562-40.5 74.902343-74.898438 6.296876-16.300781 10.699219-34.902343 11.898438-62.101562 1.199219-27.300781 1.5-36 1.5-105.5s-.101562-78.199219-1.300781-105.5zm-46.097657 209c-1.101562 25-5.300781 38.5-8.800781 47.5-8.601562 22.300781-26.300781 40-48.601562 48.601562-9 3.5-22.597657 7.699219-47.5 8.796876-27 1.203124-35.097657 1.5-103.398438 1.5s-76.5-.296876-103.402343-1.5c-25-1.097657-38.5-5.296876-47.5-8.796876-11.097657-4.101562-21.199219-10.601562-29.398438-19.101562-8.5-8.300781-15-18.300781-19.101562-29.398438-3.5-9-7.699219-22.601562-8.796876-47.5-1.203124-27-1.5-35.101562-1.5-103.402343s.296876-76.5 1.5-103.398438c1.097657-25 5.296876-38.5 8.796876-47.5 4.101562-11.101562 10.601562-21.199219 19.203124-29.402343 8.296876-8.5 18.296876-15 29.398438-19.097657 9-3.5 22.601562-7.699219 47.5-8.800781 27-1.199219 35.101562-1.5 103.398438-1.5 68.402343 0 76.5.300781 103.402343 1.5 25 1.101562 38.5 5.300781 47.5 8.800781 11.097657 4.097657 21.199219 10.597657 29.398438 19.097657 8.5 8.300781 15 18.300781 19.101562 29.402343 3.5 9 7.699219 22.597657 8.800781 47.5 1.199219 27 1.5 35.097657 1.5 103.398438s-.300781 76.300781-1.5 103.300781zm0 0"/><path d="m256.449219 124.5c-72.597657 0-131.5 58.898438-131.5 131.5s58.902343 131.5 131.5 131.5c72.601562 0 131.5-58.898438 131.5-131.5s-58.898438-131.5-131.5-131.5zm0 216.800781c-47.097657 0-85.300781-38.199219-85.300781-85.300781s38.203124-85.300781 85.300781-85.300781c47.101562 0 85.300781 38.199219 85.300781 85.300781s-38.199219 85.300781-85.300781 85.300781zm0 0"/><path d="m423.851562 119.300781c0 16.953125-13.746093 30.699219-30.703124 30.699219-16.953126 0-30.699219-13.746094-30.699219-30.699219 0-16.957031 13.746093-30.699219 30.699219-30.699219 16.957031 0 30.703124 13.742188 30.703124 30.699219zm0 0"/>
+          </svg>
+        </div>
+
+        
+    </div>
+
+  </div>
   </footer>
+
 </body>
+
 </html>
