--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <div class="main-container" >
+
 
 
   <header>
@@ -203,7 +203,7 @@
           <li><a href="#">Privacy</a></li>
         </ul>
 
-        <div class="row-flex">
+        <div class="social-icons">
 
           <a href="#" class="social-icon">
             <svg id="Bold" enable-background="new 0 0 24 24" height="30" viewBox="0 0 24 24" width="30"
@@ -236,7 +236,7 @@
 
       </div>
   </footer>
-</div>
+
 </body>
 
 </html>
